force-app/main/default/objects/Kicker_Incentive_Slab__c/Kicker_Incentive_Slab__c.object-meta.xml
<CustomObject>
    <label>Kicker Incentive Slab</label>
    <nameField>
        <label>Kicker Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kicker Incentive Slabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>