force-app/main/default/objects/Kicker_Incentive_Slab__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <defaultValue>0</defaultValue>
    <label>From</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>