force-app/main/default/objects/Kicker_Incentive_Slab__c/fields/From_Value__c.field-meta.xml
<CustomField>
    <fullName>From_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>From Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>