force-app/main/default/objects/Kicker_Incentive_Slab__c/fields/Kicker_Incentive_Slab_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_Slab_Unique_No__c</fullName>
    <displayFormat>KIS-{000000}</displayFormat>
    <label>Kicker Incentive Slab Unique No.</label>
    <type>AutoNumber</type>
</CustomField>