force-app/main/default/objects/Kicker_Incentive_Slab__c/fields/No_of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bookings__c</fullName>
    <label>No of Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>