force-app/main/default/objects/Kicker_Incentive_Slab__c/fields/To_Value__c.field-meta.xml
<CustomField>
    <fullName>To_Value__c</fullName>
    <label>To Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>